--- a/src/estilos/tablero.css
+++ b/src/estilos/tablero.css
@@ -2,7 +2,11 @@
   background-color: black;
   color: deeppink;
   text-shadow: 2px 1px 13px pink;
-  height: 100vh;
+  height: 50vh;
+  box-shadow: 1px 2px 2px 10px magenta;
+  width: 90vw;
+  margin: 0 auto;
+  border-radius: 20px;
 }
 .tablero h1 {
   font-size: 3rem;
