se agrega  componente celda y se renderiza con estilso cuando el false y true

--- a/src/estilos/celda.css
+++ b/src/estilos/celda.css
@@ -1,3 +1,9 @@
-.aquilavariable {
-  background-color: aquamarine;
+.Cell {
+  height: 50px;
+  width: 50px;
+  background-color: orange;
+}
+
+.Cell-lit {
+  background-color: aqua;
 }
